<resources>
    <string name="app_name">Trazabilidad</string>

    <string name="sign">Bienvenido</string>
    <string name="username">Usuario</string>
    <string name="passname">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>

    <string name="TEP">SIGA-MEX</string>


    <string name="titC">Consulta General Contenedores</string>
    <string name="con3">Consulta General Empresa Destino</string>
    <string name="con4">Consulta Por Municipio Empresa Destino</string>
    <string name="con5">Consulta General Distribuidores</string>
    <string name="con6">Consulta Por Municipio Distribudores</string>
    <string name="con7">Consulta General E. Recolectora</string>
    <string name="con8">Consulta Por Municipio E. Recolectora</string>
    <string name="con9">Consulta General CAT</string>
    <string name="con10">Consulta Por Municipio CAT</string>

    <string name="tit">Consula Por Estado </string>
    <string name="CAT">Centro De Acopio Temporal</string>
    <string name="basic">Selecciona un estado:</string>
    <string name="Regresar">Volver</string>
    <string name="Consultar">Consulta</string>
    <string name="csv">Descargar CSV</string>


    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>

    <string name="slogan">\"Combatiendo la piratería de agroquímicos\"</string>


    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_consul_general_distribuidor">ConsulGeneralDistribuidor</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_consul_entregax_productor">ConsulEntregaxProductor</string>
    <string name="title_activity_consu_sd">ConsuSD</string>
</resources>
