<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">
    <LinearLayout
        android:id="@+id/layoutbase"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/apejal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/apeajal2"
                />
            <ImageView
                android:id="@+id/asica"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_alignLeft="@+id/apejal"
                android:layout_alignParentRight="true"
                android:layout_gravity="top"
                app:srcCompat="@drawable/asica" />
            <ImageView
                android:id="@+id/Amocali"
                android:layout_width="60dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/fidaixbm_400x400"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/con3"
            android:textStyle="bold"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/encabezado1"
                    android:text="Nombre"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/encabezado1"
                    android:text="Domicilio"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titla"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/encabezado1"
                    android:text="Latitud"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titlo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/encabezado1"
                    android:text="Longitud"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>


        <TableLayout
            android:id="@+id/tablaGE"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-5dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnreg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/Regresar"
                android:layout_column="0"
                android:layout_row="1"
                android:backgroundTint="#558B2F"
                android:layout_centerHorizontal="true"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnconsu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/Consultar"
                android:layout_column="2"
                android:layout_row="1"
                android:backgroundTint="#558B2F"
                android:layout_centerHorizontal="true"
                />

        </GridLayout>
    </LinearLayout>



</ScrollView>